<resources>
    <string name="app_name">Используй время с умом</string>
    <string name="apps_title_bottom_menu">Приложения</string>
    <string name="habits_title_bottom_menu">Habits</string>
    <string name="statistics_title_bottom_menu">Статистика</string>
    <string name="settings_title_bottom_menu">Настройки</string>
    <string name="add_app">Add app</string>
    <string name="last_time_used">Последнее использование: %s</string>
    <string name="save_button">Сохранить</string>
    <string name="button_next">Дальше</string>
    <string name="habit_name">Имя</string>
    <string name="habit_quote">Цитата</string>
    <string name="something_else_button_label">Что-нибудь другое</string>
    <string name="pick_day_title">Выберите день</string>
    <string name="reminder_title">Reminder</string>
    <string name="save_button_text">Сохранить</string>
    <string name="total_time">Общее время:</string>
    <string name="usage_count">Usage count:</string>
    <string name="cut_usage_time_button">Ограничить время использования</string>
    <string name="delete_all">Удалить все</string>
    <string name="phone_usage_notification_title">Phone usage:</string>
    <string-array name="days_statistic_array">
        <item>Сегодня</item>
        <item>Вчера</item>
        <item>Неделя</item>
    </string-array>

    <string-array name="notification_before_end_array_entries">
        <item>@string/five_minutes</item>
        <item>@string/ten_minutes</item>
        <item>@string/fifteen_minutes</item>
    </string-array>
    <string-array name="notification_before_end_array_entriesValues">
        <item>300000</item>
        <item>600000</item>
        <item>900000</item>
    </string-array>
    <string name="title_activity_on_boarding">OnBoardingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="skip_button">Skip</string>
    <string name="button_finish_on_boarding">Finish</string>
    <string name="ignore_list_summary">Список блокированных приложений</string>
    <string name="ignore_list_title">Список блокировки</string>
    <string name="ignore_list_key">ignore_list</string>
    <string name="function_title">Функции</string>
    <string name="notification_title">Уведомнения</string>
    <string name="show_notification_title">Показывать уведомления</string>
    <string name="show_notification_summary">Время использования телефона</string>
    <string name="show_notification_key">notification</string>
    <string name="today_chip_label">Сегодня</string>
    <string name="yesterday_chip_label">Вчера</string>
    <string name="this_week_chip_label">Неделя</string>
    <string name="set_limit_usage_text_view">Установить ограничение по времени</string>
    <string name="set_limit">Установить лимит</string>
    <string name="minutes_hint_edit_text">минуты</string>
    <string name="hour_hint_edit_text">час</string>
    <string name="day_24_hours">В дне 24 часа</string>
    <string name="hour_60_minutes">В часу 60 минут</string>
    <string name="you_are_not_ready">Вы ничего не ввели</string>
    <string name="limit_set">Лимит установлен для %s</string>
    <string name="change_limit">Изменить лимит</string>
    <string name="nothing">Ничего нет</string>
    <string name="cannot_use_app">Вы не можете использовать %s в %s </string>
    <string name="in_this_day">в этот день.</string>
    <string name="closest_hour">в ближайший час</string>
    <string name="i_want_to_slack_key">limit_off</string>
    <string name="i_want_to_slack_title">Хочу прокрастинировать!</string>
    <string name="limit_off_summary">Отключить ограничение на приложения на 30 мин, доступно 1 раз в день</string>
    <string name="limit_in_day_chip">Лимит в день</string>
    <string name="limit_in_day_chip_with_args">Лимит в день %s</string>
    <string name="set_hourly_limit">Установите часовой лимит</string>
    <string name="positive_button_title">OK</string>
    <string name="negative_button_title">Закрыть</string>
    <string name="hourly_limit_set_to">Часовой лимит установлен на %s минут</string>
    <string name="sort_by_usage_time_menu">По времени использования</string>
    <string name="sort_by_limited_time_menu">По времени блокировки</string>
    <string name="last_used_text">Последнее использование: </string>
    <string name="limit_in_hour_chip_with_args">Лимит в час %s</string>
    <string name="ten_minutes">10 минут</string>
    <string name="fifteen_minutes">15 минут</string>
    <string name="five_minutes">5 минут</string>
    <string name="show_time_preference_key">show_time</string>
    <string name="notification_before_lock_key">notification_before_lock</string>
    <string name="remaining_time">Оставшееся время:</string>
    <string name="cannot_change_time">Вы не можете сегодня изменять время</string>
</resources>
