<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:key="notification_category"
        android:title="@string/notification_title">

        <SwitchPreferenceCompat
            android:key="@string/show_notification_key"
            android:title="@string/show_notification_title"
            android:summary="@string/show_notification_summary"/>


    </PreferenceCategory>

    <PreferenceCategory
        android:key="functions_category"
        android:title="@string/function_title">

        <Preference
            android:key="@string/ignore_list_key"
            android:title="@string/ignore_list_title"
            android:summary="@string/ignore_list_summary"
            app:fragment="com.maximus.productivityappfinalproject.presentation.ui.IgnoreListFragment"
            />

        <SwitchPreferenceCompat
            android:key="@string/i_want_to_slack_key"
            android:title="@string/i_want_to_slack_title"
            android:summary="@string/limit_off_summary"
            />

    </PreferenceCategory>

</PreferenceScreen>