<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/app_icon_usage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:src="@mipmap/ic_launcher"/>




    <View
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/view"
        android:layout_width="1dp"
        android:layout_height="1dp"
        app:layout_constraintGuide_percent="0.3"/>


    <TextView
        android:id="@+id/time_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:text="@string/set_limit_usage_text_view"
        android:textAppearance="?textAppearanceHeadline6"
        app:layout_constraintBottom_toTopOf="@+id/in_hour_text_view"

        app:layout_constraintEnd_toEndOf="@+id/app_icon_usage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/app_icon_usage"
        app:layout_constraintTop_toBottomOf="@+id/app_icon_usage" />

    <TextView
        android:id="@+id/in_hour_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/square"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="В час"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="30sp"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <EditText
        android:id="@+id/edit_text_limit_in_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/minutes_hint_edit_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/in_hour_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/in_hour_text_view"
        app:layout_constraintTop_toBottomOf="@+id/in_hour_text_view"
        android:importantForAutofill="no" />


    <TextView
        android:id="@+id/in_day_limit_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/square"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="В день"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_limit_in_hour" />

    <EditText
        android:id="@+id/edit_text_limit_in_day_by_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/hour_hint_edit_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/in_day_limit_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/in_day_limit_text_view"
        app:layout_constraintTop_toBottomOf="@id/in_day_limit_text_view"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/edit_text_limit_in_day_by_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/minutes_hint_edit_text"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/in_day_limit_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/in_day_limit_text_view"
        app:layout_constraintTop_toBottomOf="@id/edit_text_limit_in_day_by_hours"
        android:importantForAutofill="no" />




    <com.google.android.material.button.MaterialButton
        android:id="@+id/set_limit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/set_limit"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>