<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded_dialog"
    android:orientation="vertical"
    android:padding="8dp"
    app:behavior_peekHeight="16dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/app_name_bottom_sheet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_weight="2"
            android:text="AppName"
            android:textColor="#444"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/time_used_bottom_sheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold"
            tools:text="13m 10s" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/last_used_text" />

    <TextView
        android:id="@+id/last_used_bottom_sheet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        tools:text="March 3th "
        android:layout_marginStart="40dp"/>
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


<!--        <TextView-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_weight="2"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Установить лимит в день: "-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>-->


        <com.google.android.material.chip.Chip
            android:id="@+id/limit_in_day"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/limit_in_day_chip"
            app:chipBackgroundColor="@android:color/white"
            app:chipIcon="@drawable/ic_access_time_black_24dp"
            />


<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="#000"-->
<!--        android:layout_gravity=""-->
<!--        android:text="0"-->
<!--        android:textColor="#fff" />-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.chip.Chip
            android:id="@+id/limit_in_hour"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Лимит в час"
            app:chipBackgroundColor="@android:color/white"
            app:chipIcon="@drawable/ic_access_time_black_24dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

        <TextView
            android:id="@+id/remain_time_tv"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:text="@string/remaining_time"
            android:textSize="20sp"/>

            <TextView
                android:id="@+id/remain_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10 min"
                android:textSize="20sp"/>
        </LinearLayout>

<!--        <TextView-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="2"-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:text="Установить лимит в час: "-->
<!--            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>-->


<!--        <Button-->
<!--            android:id="@+id/button2"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:background="#000"-->
<!--            android:layout_gravity="center_vertical"-->
<!--            android:foreground="?attr/selectableItemBackground"-->
<!--            android:text="0"-->
<!--            android:textColor="#fff" />-->
    </LinearLayout>

    <include layout="@layout/fragment_app_details"/>

</LinearLayout>