<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/app_icon_image_view"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tool:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/app_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_icon_image_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAppearance="?textAppearanceBody1"
        tool:text="Telegram"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/spinner_card_view"
        android:layout_margin="@dimen/padding_small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_name_text_view"
        app:layout_constraintLeft_toLeftOf="parent">

<!--        <Spinner-->
<!--            android:id="@+id/spinner_days"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            />-->
    </androidx.cardview.widget.CardView>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/interval_chip_group"
        android:layout_margin="@dimen/padding_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner_card_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_today"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="Today"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_yesterday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="Yesterday"/>

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_this_week"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            app:chipBackgroundColor="@android:color/holo_red_dark"
            android:text="This week"/>

    </com.google.android.material.chip.ChipGroup>


    <androidx.cardview.widget.CardView
        android:id="@+id/total_time_card_view"
        android:layout_margin="@dimen/padding_small"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/interval_chip_group"
        app:layout_constraintLeft_toLeftOf="parent">


        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/total_time"/>

        <TextView
            android:id="@+id/usage_time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            tool:text="3m 30s"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/usage_count_card_view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="@dimen/padding_small"
        app:layout_constraintTop_toBottomOf="@id/total_time_card_view"
        app:layout_constraintLeft_toLeftOf="parent">

        <TextView

            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:text="@string/usage_count"/>
        <TextView
            android:id="@+id/usage_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            tool:text="100"/>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_marginTop="@dimen/padding_small"
        app:layout_constraintTop_toBottomOf="@id/usage_count_card_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintBottom_toTopOf="@id/cut_usage_time_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cut_usage_time_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_small"
        app:layout_constraintTop_toBottomOf="@id/recycler_view"
        android:text="@string/cut_usage_time_button"/>



</androidx.constraintlayout.widget.ConstraintLayout>